--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,5 @@
 {
-  "extends": "next/core-web-vitals"
+  "$schema": "https://json.schemastore.org/eslintrc",
+  "extends": ["next/core-web-vitals", "prettier"],
+  "rules": {}
 }
